# mytodo

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Rocket.toml
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/db/: models.rs
frontend/: Cargo.toml  Makefile.toml  index.html
frontend/src/: lib.rs
migrations/2020-12-29-012611_task/: down.sql  up.sql
migrations/2021-01-03-150305_done_flag/: down.sql  up.sql
src/: lib.rs
src/db/: mod.rs  models.rs
