[package]
name = "frontend"
version = "0.1.0"
authors = ["Martin Trejo Chavez <chillicoder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
mytodo = { path = ".." }
futures = "^0.3.4"
seed = "^0.6.0"
wasm-bindgen = "^0.2.60"
web-sys = "^0.3.37"
